added a few csv files for sunburst graphs

--- a/acr_visual_page/visualization.html
+++ b/acr_visual_page/visualization.html
@@ -4,7 +4,7 @@
 <title>Anti-CRISPR Proteins Visualization Page</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/style.css">
-<script src="script/script.js"></script>
+<!-- <script src="script/script.js"></script> -->
 <script type="text/javascript" src="https://d3js.org/d3.v4.js"></script>
 <script type="text/javascript" src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 </head>
@@ -46,7 +46,7 @@
                       <option value="12">acrVIB</option>
                     </select>
                     <div class="input-group-append">
-                      <button class="btn btn-outline-secondary" type="button" onclick="visualize()">Visualize</button>
+                      <button class="btn btn-outline-secondary" type="button" onclick="sunburst_visualize()">Visualize</button>
                       <!-- <button class="btn btn-outline-secondary" type="button" onclick="clear()">Clear</button> -->
                     </div>
                     
