--- a/acr_visual_page/test.html
+++ b/acr_visual_page/test.html
@@ -12,7 +12,6 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
   <script src="script/script.js"></script>
-  <script src="jquery-csv.js"></script>
   <script type="text/javascript" src="https://d3js.org/d3.v4.js"></script>
   <script type="text/javascript" src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 
@@ -60,7 +59,7 @@
             </select>
             <div class="input-group-append">
                 <button class="btn btn-outline-secondary" type="button" onclick="sunburst_visualize()">Visualize</button>
-                <!-- <button class="btn btn-outline-secondary" type="button" onclick="clear()">Clear</button> -->
+                <button class="btn btn-outline-secondary" type="button" onclick="clear()">Clear</button>
             </div>
         </div>
     </div>
